--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -12,6 +12,122 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pathway_data = pandas.read_csv('/data4/mankovic/ZOETIS/felis_catus_pathways.csv', index_col = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pathway_data = pathway_data.fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R-HSA-162699\n",
+      "A1BG           0.0\n",
+      "A1CF           0.0\n",
+      "A2ML1          0.0\n",
+      "A2M            0.0\n",
+      "A3GALT2        0.0\n",
+      "              ... \n",
+      "NKX6.2         0.0\n",
+      "NKX6.3         0.0\n",
+      "TRNAY.GUA_5    0.0\n",
+      "MARC1          0.0\n",
+      "MARC2          0.0\n",
+      "Name: R-HSA-162699, Length: 35607, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "ii=0\n",
+    "for index, row in pathway_data.iterrows():\n",
+    "    if ii > 0:\n",
+    "        break\n",
+    "    print(index)\n",
+    "    print(row)\n",
+    "    ii+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['ALPI', 'ALPL', 'ART3', 'ART4', 'BST1', 'CD109', 'CNTN3', 'CNTN4',\n",
+       "       'CNTN5', 'CPM', 'DPM1', 'DPM2', 'DPM3', 'FCGR3A', 'GP2', 'GPAA1',\n",
+       "       'GPIHBP1', 'GPLD1', 'IZUMO1R', 'LOC101084733', 'LOC101086271',\n",
+       "       'LOC101091333', 'LOC101096984', 'LSAMP', 'LY6D', 'LY6G6C', 'LY6H',\n",
+       "       'LYPD1', 'LYPD2', 'LYPD3', 'LYPD4', 'LYPD5', 'LYPD6B', 'LYPD8', 'MDGA1',\n",
+       "       'MDGA2', 'MELTF', 'NEGR1', 'NRN1L', 'NRN1', 'NTM', 'NTNG1', 'NTNG2',\n",
+       "       'OPCML', 'OTOA', 'PGAP1', 'PIGA', 'PIGB', 'PIGC', 'PIGF', 'PIGG',\n",
+       "       'PIGH', 'PIGK', 'PIGL', 'PIGM', 'PIGN', 'PIGO', 'PIGP', 'PIGQ', 'PIGS',\n",
+       "       'PIGT', 'PIGU', 'PIGV', 'PIGW', 'PIGX', 'PIGY', 'PLAUR', 'PLET1',\n",
+       "       'PRND', 'PSCA', 'RECK', 'RTN4RL1', 'RTN4RL2', 'SPACA4', 'TECTA',\n",
+       "       'TECTB', 'TEX101', 'THY1', 'XPNPEP2'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "entries = row.values\n",
+    "row.index[entries != 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Series' object has no attribute 'columns'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_31493/2194740638.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mmask\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mfeatures_in_pathway\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcols\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmask\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5485\u001b[0m         ):\n\u001b[1;32m   5486\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5487\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5488\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5489\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Series' object has no attribute 'columns'"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "mask = row.gt(0.0).values\n",
+    "features_in_pathway = cols[mask].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
