--- a/test_GLPE.ipynb
+++ b/test_GLPE.ipynb
@@ -34,11 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = pandas.read_csv('/data4/mankovic/GSE73072/calcom_splits/datagse73072_5to1_25_32_train_limma.csv', index_col = 'SubjectID')"
+    "ds = pandas.read_csv('/data4/mankovic/GSE73072/calcom_splits/data/gse73072_5to1_25_32_train_limma.csv', index_col = 'SubjectID')"
    ]
   },
   {
@@ -83,7 +83,8 @@
     "precomputed_clpe = GLPE.CLPE(centrality_measure = 'degree', \n",
     "                    network_type = 'precomputed',\n",
     "                    feature_ids = list(ds.columns),\n",
-    "                    pathway_files = '/data3/darpa/omics_databases/ensembl2pathway/pathways_edges/pathways/pw_edge_mtx/',\n",
+    "                    pathway_files = '/data4/mankovic/GSE73072/new_pw_edge_mtx/',\n",
+    "                    # pathway_files = '/data3/darpa/omics_databases/ensembl2pathway/pathways_edges/pathways/pw_edge_mtx/',\n",
     "                    directed = False,\n",
     "                    heat_kernel_param=2,\n",
     "                    normalize_rows=False)\n",
