test_GLPE working

--- a/test_GLPE.ipynb
+++ b/test_GLPE.ipynb
@@ -34,10 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ds = pandas.read_csv('/data4/mankovic/GSE73072/calcom_splits/entrez_ids/datagse73072_5to1_25_32_train_limma.csv', index_col = 'SubjectID')\n",
     "ds = pandas.read_csv('/data4/mankovic/GSE73072/calcom_splits/data/gse73072_5to1_25_32_train_limma.csv', index_col = 'SubjectID')"
    ]
   },
@@ -50,28 +51,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CLPE(centrality_measure='degree',\n",
-      "     feature_ids=['780', '5982', '3310', '7849', '2978', '7318', '7067',\n",
-      "                  '11099', '6352', '1571', '2049', '2101', '1548', '2621',\n",
-      "                  '4323', '8717', '5337', '2342', '441263', '572', '10594',\n",
-      "                  '826', '11224', '6158', '1982', '8664', '11315', '6727',\n",
-      "                  '2665', '2665.1', ...],\n",
+      "CLPE(centrality_measure='page_rank',\n",
+      "     feature_ids=['1007_s_at', '1053_at', '117_at', '121_at', '1255_g_at',\n",
+      "                  '1294_at', '1316_at', '1320_at', '1405_i_at', '1431_at',\n",
+      "                  '1438_at', '1487_at', '1494_f_at', '1598_g_at', '160020_at',\n",
+      "                  '1729_at', '177_at', '1773_at', '179_at', '1861_at',\n",
+      "                  '200000_s_at', '200001_at', '200002_at', '200003_s_at',\n",
+      "                  '200004_at', '200005_at', '200006_at', '200007_at',\n",
+      "                  '200008_s_at', '200009_at', ...],\n",
       "     heat_kernel_param=2.0, network_type='precomputed', normalize_rows=0.0,\n",
-      "     pathway_files='/data3/darpa/omics_databases/ensembl2pathway/pathways_edges/pathways/pw_edge_mtx/')\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/katrina/a/mankovic/PathwayAnalysis/GLPE.py:256: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  scores = scores / np.max(degrees)\n"
+      "     pathway_files='/data4/mankovic/GSE73072/new_pw_edge_mtx/')\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "((2261, 20973), 2261)"
+       "((2261, 22277), 2261)"
       ]
      },
      "execution_count": 3,
@@ -80,7 +75,7 @@
     }
    ],
    "source": [
-    "precomputed_clpe = GLPE.CLPE(centrality_measure = 'degree', \n",
+    "precomputed_clpe = GLPE.CLPE(centrality_measure = 'page_rank', \n",
     "                    network_type = 'precomputed',\n",
     "                    feature_ids = list(ds.columns),\n",
     "                    pathway_files = '/data4/mankovic/GSE73072/new_pw_edge_mtx/',\n",
@@ -102,34 +97,48 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "1894.5213742354752"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(precomputed_clpe.pathway_transition_matrix_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "CLPE(centrality_measure='degree',\n",
-      "     feature_ids=['780', '5982', '3310', '7849', '2978', '7318', '7067',\n",
-      "                  '11099', '6352', '1571', '2049', '2101', '1548', '2621',\n",
-      "                  '4323', '8717', '5337', '2342', '441263', '572', '10594',\n",
-      "                  '826', '11224', '6158', '1982', '8664', '11315', '6727',\n",
-      "                  '2665', '2665.1', ...],\n",
+      "     feature_ids=['1007_s_at', '1053_at', '117_at', '121_at', '1255_g_at',\n",
+      "                  '1294_at', '1316_at', '1320_at', '1405_i_at', '1431_at',\n",
+      "                  '1438_at', '1487_at', '1494_f_at', '1598_g_at', '160020_at',\n",
+      "                  '1729_at', '177_at', '1773_at', '179_at', '1861_at',\n",
+      "                  '200000_s_at', '200001_at', '200002_at', '200003_s_at',\n",
+      "                  '200004_at', '200005_at', '200006_at', '200007_at',\n",
+      "                  '200008_s_at', '200009_at', ...],\n",
       "     heat_kernel_param=2.0, network_type='correlation', normalize_rows=0.0,\n",
       "     pathway_files='/data3/darpa/omics_databases/ensembl2pathway/pathways_edges/pathways/pw_edge_mtx/')\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/katrina/a/mankovic/PathwayAnalysis/GLPE.py:256: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  scores = scores / np.max(degrees)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "((2261, 20973), 2261)"
+       "((2261, 22277), 2261)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
