--- a/test_GLPE.ipynb
+++ b/test_GLPE.ipynb
@@ -51,7 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CLPE(centrality_measure='page_rank',\n",
+      "CLPE(centrality_measure='page_rank', directed=True,\n",
       "     feature_ids=['1007_s_at', '1053_at', '117_at', '121_at', '1255_g_at',\n",
       "                  '1294_at', '1316_at', '1320_at', '1405_i_at', '1431_at',\n",
       "                  '1438_at', '1487_at', '1494_f_at', '1598_g_at', '160020_at',\n",
@@ -80,7 +80,7 @@
     "                    feature_ids = list(ds.columns),\n",
     "                    pathway_files = '/data4/mankovic/GSE73072/new_pw_edge_mtx/',\n",
     "                    # pathway_files = '/data3/darpa/omics_databases/ensembl2pathway/pathways_edges/pathways/pw_edge_mtx/',\n",
-    "                    directed = False,\n",
+    "                    directed = True,\n",
     "                    heat_kernel_param=2,\n",
     "                    normalize_rows=False)\n",
     "\n",
@@ -99,7 +99,7 @@
     {
      "data": {
       "text/plain": [
-       "1894.5213742354752"
+       "1788.3220634196334"
       ]
      },
      "execution_count": 4,
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
