--- a/test_GLPE.ipynb
+++ b/test_GLPE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,36 +44,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CLPE(centrality_measure='page_rank', directed=True,\n",
-      "     feature_ids=['1007_s_at', '1053_at', '117_at', '121_at', '1255_g_at',\n",
-      "                  '1294_at', '1316_at', '1320_at', '1405_i_at', '1431_at',\n",
-      "                  '1438_at', '1487_at', '1494_f_at', '1598_g_at', '160020_at',\n",
-      "                  '1729_at', '177_at', '1773_at', '179_at', '1861_at',\n",
-      "                  '200000_s_at', '200001_at', '200002_at', '200003_s_at',\n",
-      "                  '200004_at', '200005_at', '200006_at', '200007_at',\n",
-      "                  '200008_s_at', '200009_at', ...],\n",
-      "     heat_kernel_param=2.0, network_type='precomputed', normalize_rows=0.0,\n",
-      "     pathway_files='/data4/mankovic/GSE73072/new_pw_edge_mtx/')\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "((2261, 22277), 2261)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "precomputed_clpe = GLPE.CLPE(centrality_measure = 'page_rank', \n",
     "                    network_type = 'precomputed',\n",
@@ -93,20 +66,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1788.3220634196334"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "precomputed_clpe.transform(np.array(ds)).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "np.sum(precomputed_clpe.pathway_transition_matrix_)"
    ]
@@ -115,34 +86,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CLPE(centrality_measure='degree',\n",
-      "     feature_ids=['1007_s_at', '1053_at', '117_at', '121_at', '1255_g_at',\n",
-      "                  '1294_at', '1316_at', '1320_at', '1405_i_at', '1431_at',\n",
-      "                  '1438_at', '1487_at', '1494_f_at', '1598_g_at', '160020_at',\n",
-      "                  '1729_at', '177_at', '1773_at', '179_at', '1861_at',\n",
-      "                  '200000_s_at', '200001_at', '200002_at', '200003_s_at',\n",
-      "                  '200004_at', '200005_at', '200006_at', '200007_at',\n",
-      "                  '200008_s_at', '200009_at', ...],\n",
-      "     heat_kernel_param=2.0, network_type='correlation', normalize_rows=0.0,\n",
-      "     pathway_files='/data3/darpa/omics_databases/ensembl2pathway/pathways_edges/pathways/pw_edge_mtx/')\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "((2261, 22277), 2261)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cor_clpe = GLPE.CLPE(centrality_measure = 'degree', \n",
     "                    network_type = 'correlation',\n",
@@ -161,17 +105,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "null trial 0 done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "feats = pandas.read_csv('/data4/mankovic/GSE73072/features/5_datasets_with_limma_subject_id_training_25_32.csv', index_col = 0)\n",
     "feat_ids = [str(f) for f in list(feats['EntrezID'])]\n",
@@ -181,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,25 +138,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "CLPE(centrality_measure='degree',\n",
-       "     feature_ids=['1', '2', '3', '4', '5', '7', '8', '9', '10', '11', '12',\n",
-       "                  '13', '14', '16', '17', '18', '19', '20', '21', '22', '23',\n",
-       "                  '24', '25', '26', '27', '30', '31', '32', '33', '34', ...],\n",
-       "     heat_kernel_param=2.0, network_type='correlation', normalize_rows=0.0,\n",
-       "     pathway_files='/data4/mankovic/De-Identified_CZ/deidentified_fcpw.csv')"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_other_clpe = GLPE.CLPE(centrality_measure = 'degree', \n",
     "                    network_type = 'correlation',\n",
@@ -234,65 +154,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "28068"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(list(Z40_data.columns))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "CLPE(centrality_measure='degree',\n",
-       "     feature_ids=['1', '2', '3', '4', '5', '7', '8', '9', '10', '11', '12',\n",
-       "                  '13', '14', '16', '17', '18', '19', '20', '21', '22', '23',\n",
-       "                  '24', '25', '26', '27', '30', '31', '32', '33', '34', ...],\n",
-       "     heat_kernel_param=2.0, network_type='correlation', normalize_rows=0.0,\n",
-       "     pathway_files='/data4/mankovic/De-Identified_CZ/deidentified_fcpw.csv')"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_other_clpe.fit(np.array(Z40_data))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(85521.4158050756, (1979, 28068), array([    8, 28068]))"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.sum(my_other_clpe.pathway_transition_matrix_), my_other_clpe.pathway_transition_matrix.shape, np.array(Z40_data.shape)"
    ]
