changes to test

--- a/test_GLPE.ipynb
+++ b/test_GLPE.ipynb
@@ -200,7 +200,8 @@
   },
   "kernelspec": {
    "display_name": "Python 3.8.8 64-bit ('base': conda)",
-   "name": "python3"
+   "language": "python",
+   "name": "python388jvsc74a57bd0bf07fe7600081ccdde2607d4f5cbc1e85188937e2965360690fe82ac0224b1eb"
   },
   "language_info": {
    "codemirror_mode": {
