mean modules and binary tree rep of clustering

--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -12,6 +12,125 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "0\n",
+      "\n",
+      "\n",
+      "0\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from binarytree import Node\n",
+    "root = Node(0)\n",
+    "leaf = root\n",
+    "print(leaf)\n",
+    "print(root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "1\n",
+      "\n",
+      "\n",
+      "  0\n",
+      " /\n",
+      "1\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "leaf.left = Node(1)\n",
+    "leaf = leaf.left\n",
+    "print(leaf)\n",
+    "print(root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "2\n",
+      "\n",
+      "\n",
+      "  __0\n",
+      " /\n",
+      "1\n",
+      " \\\n",
+      "  2\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "leaf.right = Node(2)\n",
+    "leaf = leaf.right\n",
+    "print(leaf)\n",
+    "print(root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  6\n",
+      " /\n",
+      "5\n",
+      "\n",
+      "\n",
+      "    3.1\n",
+      "   /   \\\n",
+      "  6     8\n",
+      " /\n",
+      "5\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(new_root)\n",
+    "print(root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
