--- a/test_scripts/test_GLPE.ipynb
+++ b/test_scripts/test_GLPE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,29 +34,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ds = pandas.read_csv('/data4/mankovic/GSE73072/calcom_splits/entrez_ids/datagse73072_5to1_25_32_train_limma.csv', index_col = 'SubjectID')\n",
-    "ds = pandas.read_csv('./data/gse73072_4to2_25_32_subjectID_limma_train.csv', index_col = 'SubjectID')"
+    "\n",
+    "ds = pandas.read_csv('../data/example_data.csv', index_col = 'SampleID')"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CLPE(centrality_measure='page_rank', directed=True,\n",
+      "     feature_ids=['1007_s_at', '1053_at', '117_at', '121_at', '1255_g_at',\n",
+      "                  '1294_at', '1316_at', '1320_at', '1405_i_at', '1431_at',\n",
+      "                  '1438_at', '1487_at', '1494_f_at', '1598_g_at', '160020_at',\n",
+      "                  '1729_at', '177_at', '1773_at', '179_at', '1861_at',\n",
+      "                  '200000_s_at', '200001_at', '200002_at', '200003_s_at',\n",
+      "                  '200004_at', '200005_at', '200006_at', '200007_at',\n",
+      "                  '200008_s_at', '200009_at', ...],\n",
+      "     heat_kernel_param=2.0, network_type='precomputed', normalize_rows=False,\n",
+      "     pathway_files='../data/pw_edge_mtx',\n",
+      "     pathway_transition_matrix=array(None, dtype=object))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "((18, 100), 18)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "precomputed_clpe = GLPE.CLPE(centrality_measure = 'page_rank', \n",
     "                    network_type = 'precomputed',\n",
     "                    feature_ids = list(ds.columns),\n",
-    "                    pathway_files = '/data4/mankovic/GSE73072/new_pw_edge_mtx/',\n",
+    "                    pathway_files = '../data/pw_edge_mtx',\n",
     "                    # pathway_files = '/data3/darpa/omics_databases/ensembl2pathway/pathways_edges/pathways/pw_edge_mtx/',\n",
     "                    directed = True,\n",
     "                    heat_kernel_param=2,\n",
@@ -200,13 +223,10 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "9a16b7d45e15add018271b8879906ed388208b17729257166cad5f2212e101aa"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "display_name": "Python 3.8.8 ('base': conda)",
    "language": "python",
-   "name": "python388jvsc74a57bd0bf07fe7600081ccdde2607d4f5cbc1e85188937e2965360690fe82ac0224b1eb"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -220,7 +240,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "9a16b7d45e15add018271b8879906ed388208b17729257166cad5f2212e101aa"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
